--- a/cvweb/index.html
+++ b/cvweb/index.html
@@ -50,7 +50,7 @@
             <h1>Yurii Vynokurov - QA Engineer</h1>
             <p><i class="fas fa-city"></i> City: Kyiv</p>
             <p><a href="tel:+380631721614"><i class="fas fa-phone-square"></i> Phone:+380631721614</a></p>
-            <p><a href="vynokurovy@gmail.com"><i class="fas fa-envelope"></i> Email: vynokurovy@gmail.com</a></p>
+            <p><a href="mailto:vynokurovy@gmail.com"><i class="fas fa-envelope"></i> Email: vynokurovy@gmail.com</a></p>
             <p><a href="skype:vynokurovy?userinfo"><i class="fab fa-skype"></i> Skype: vynokurovy</a></p>
             <p><a href="tg://resolve?domain=vynokurovy"><i class="fab fa-telegram"></i> Telegram: vynokurovy</a></p>
             <p><a href="https://www.linkedin.com/in/vynokurovy/"><i class="fab fa-linkedin"></i> Linkedin: https://www.linkedin.com/in/vynokurovy/</a></p>
