skype and master

--- a/cvweb/index.html
+++ b/cvweb/index.html
@@ -25,8 +25,7 @@
         <li>responsibility</li>
         <li>perseverance</li>
         <li>attention to detail</li>
-        <li>activity</li>
-        <li>ambition</li>
+        <li>purposeful</li>
         <li>discipline</li>
         <li>focus on results</li>
         </ul>
@@ -51,7 +50,7 @@
             <p><i class="fas fa-city"></i> City: Kyiv</p>
             <p><a href="tel:+380631721614"><i class="fas fa-phone-square"></i> Phone:+380631721614</a></p>
             <p><a href="mailto:vynokurovy@gmail.com"><i class="fas fa-envelope"></i> Email: vynokurovy@gmail.com</a></p>
-            <p><a href="skype:vynokurovy?userinfo"><i class="fab fa-skype"></i> Skype: vynokurovy</a></p>
+            <p><a href="skype:vynokurovy?chat"><i class="fab fa-skype"></i> Skype: vynokurovy</a></p>
             <p><a href="tg://resolve?domain=vynokurovy"><i class="fab fa-telegram"></i> Telegram: vynokurovy</a></p>
             <p><a href="https://www.linkedin.com/in/vynokurovy/"><i class="fab fa-linkedin"></i> Linkedin: https://www.linkedin.com/in/vynokurovy/</a></p>
     </div>
@@ -84,7 +83,7 @@
     </div>
     <div class="content">
         <h1>Education</h2>
-        <p>2015 - 2020 National Pedagogical Dragomanov University, Мagister&nbsp; (History)</p></div>
+        <p>2015 - 2020 National Pedagogical Dragomanov University, Master  (History)</p></div>
 </td>
 </tr>
 </tbody>
