--- a/cvweb/index.html
+++ b/cvweb/index.html
@@ -21,13 +21,17 @@
     <div class="content_left">
         <h2><b>QUALITY</b></h2>
         <ul>
-        <li>sociability</li>
-        <li>responsibility</li>
-        <li>perseverance</li>
-        <li>attention to detail</li>
-        <li>purposeful</li>
-        <li>discipline</li>
-        <li>focus on results</li>
+        <li>Vigorous</li>
+        <li>Creative</li>
+        <li>Diligent</li>
+        <li>Friendly</li>
+        <li>Responsible</li>
+        <li>Resourceful</li>
+        <li>Goal-Oriented</li>
+        <li>Quick Learner</li>
+        <li>Highly Productive</li>
+        <li>Detail-Oriented</li>
+        <li>Quality-Oriented </li>
         </ul>
     </div>
 
@@ -47,7 +51,7 @@
     </div>
     <div class="content">
             <h1>Yurii Vynokurov - QA Engineer</h1>
-            <p><i class="fas fa-city"></i> City: Kyiv</p>
+            <p><a href="https://www.google.com/maps/place/%D0%9A%D0%B8%D1%97%D0%B2,+02000/data=!4m2!3m1!1s0x40d4cf4ee15a4505:0x764931d2170146fe?sa=X&ved=2ahUKEwij27rk7br0AhXJCOwKHRMEBywQ8gF6BAhoEAE"><i class="fas fa-city"></i> City: Kyiv</a></p>
             <p><a href="tel:+380631721614"><i class="fas fa-phone-square"></i> Phone:+380631721614</a></p>
             <p><a href="mailto:vynokurovy@gmail.com"><i class="fas fa-envelope"></i> Email: vynokurovy@gmail.com</a></p>
             <p><a href="skype:vynokurovy?chat"><i class="fab fa-skype"></i> Skype: vynokurovy</a></p>
@@ -66,7 +70,7 @@
         <li><b>Automation Testing Tools: </b>- Selenium IDE, Katalon;</li>
         <li><b>API Testing Tools:- </b> Postman, SoapUI , REST Client, Wizdler;</li>
         <li><b>Webserver: </b>- Apache 2.2 (basics);</li>
-        <li><b>Tools: </b>- Devtools, Charles Proxy, Fiddler, VS code;</li>
+        <li><b>Tools: </b>- Devtools, VS code;</li>
         <li ><b>English Proficiency:</b> Pre-Intermediate;</li>
         </ul></div>
     <div class="content">
