--- a/cvweb/index.html
+++ b/cvweb/index.html
@@ -21,15 +21,14 @@
     <div class="content_left">
         <h2><b>QUALITY</b></h2>
         <ul>
-        <li>Responsible</li>
-        <li>Resourceful</li>
-        <li>Creative</li>
-        <li>Diligent</li>
-        <li>Goal-Oriented</li>
-        <li>Quick Learner</li>
-        <li>Highly Productive</li>
-        <li>Detail-Oriented</li>
-        <li>Quality-Oriented </li>
+        <li>Sociability</li>
+        <li>Responsibility</li>
+        <li>Perseverance</li>
+        <li>Attention to detail</li>
+        <li>Activity</li>
+        <li>Purposeful</li>
+        <li>Discipline</li>
+        <li>Focus on results</li>
         </ul>
     </div>
 
@@ -58,22 +57,20 @@
     </div>
     <div class="content"><h2>SKILLS</h2>
         <ul>
-        <li>Check-lists, test cases, preparing bug reports, test result report;</li>
-        <li>Functional testing, UI testing, cross platform testing;</li>
-        <li>JSON, XML, HTML, CSS;</li>
-         <li>Git, GitHub,&nbsp; Linux bash,&nbsp; SQL; </li>
-        <li><b>Test Management Systems: - </b>Qase, TestRail, TestLink;</li>
-        <li><b>Bug Tracking Systems: - </b>Jira, Azure;</li>
+        <li>Software testing theory;</li>
+        <li>Check-lists, test cases, test suite, bug reports;</li>
+        <li>HTML, CSS, Git, GitHub,  Linux bash,  SQL; </li>
+        <li><b>Test Management Systems: - </b>Qase;</li>
+        <li><b>Bug Tracking Systems: - </b>Jira;</li>
         <li><b>OS:</b> - Windows, Android, linux;</li>
         <li><b>Automation Testing Tools: </b>- Selenium IDE, Katalon;</li>
-        <li><b>API Testing Tools:- </b> Postman, SoapUI , REST Client, Wizdler;</li>
-        <li><b>Webserver: </b>- Apache 2.2 (basics);</li>
+        <li><b>API Testing Tools:- </b> Postman, Wizdler;</li>
         <li><b>Tools: </b>- Devtools, VS code;</li>
         <li ><b>English Proficiency:</b> Pre-Intermediate;</li>
         </ul></div>
     <div class="content">
         <h2>Work experience</h2>
-<p>July 2018 -October 2019  Call center operator</p>
+<p>July  2018 -October 2019,  February 2021-till now   Call center operator</p>
 <p>Main responsibilities:</p>
 <ul>
 <li>Handling of incoming and outgoing telephone calls;</li>
