--- a/cvweb/index.html
+++ b/cvweb/index.html
@@ -70,7 +70,7 @@
         </ul></div>
     <div class="content">
         <h2>Work experience</h2>
-<p>July  2018 -October 2019,  February 2021-till now   Call center operator</p>
+<p>July  2018 -October 2019,  February 2021-till now.   Call center operator</p>
 <p>Main responsibilities:</p>
 <ul>
 <li>Handling of incoming and outgoing telephone calls;</li>
