--- a/cvweb/index.html
+++ b/cvweb/index.html
@@ -36,7 +36,7 @@
       
 <h2> Additional Information </h2>
 <p>I am interested in IT and web technologies.</p>
-<p>I read professional literature, watch educational videos and take courses.</p>
+<p>I always progress, read professional literature, watch educational videos and take  online courses.</p>
 <p>In my free time, I play the guitar and read foreign literature.</p>
     </div>
     <div class="content_left">
