--- a/cvweb/index.html
+++ b/cvweb/index.html
@@ -66,7 +66,7 @@
         <li><b>Automation Testing Tools: </b>- Selenium IDE, Katalon;</li>
         <li><b>API Testing Tools:- </b> Postman, Wizdler;</li>
         <li><b>Tools: </b>- Devtools, VS code;</li>
-        <li ><b>English Proficiency:</b> Pre-Intermediate;</li>
+        <li ><b>English Proficiency:</b> Intermediate;</li>
         </ul></div>
     <div class="content">
         <h2>Work experience</h2>
