--- a/cvweb/index.html
+++ b/cvweb/index.html
@@ -41,7 +41,7 @@
     </div>
     <div class="content_left">
         <h2>Reason for applying for a job</h2>
-<p>I  am going  to grove in the quality assurance and believe that my experience, skills and knowledge will be useful for your company.</p>
+<p>I  am going  to grow  in the quality assurance and believe that my experience, skills and knowledge will be useful for your company.</p>
 <p>Мy goal is to get a position in a company where I can grow and develop as a specialist.</p>
 </td>
 <td><br />
