--- a/cvweb/index.html
+++ b/cvweb/index.html
@@ -37,11 +37,11 @@
 <h2> Additional Information </h2>
 <p>I am interested in IT and web technologies.</p>
 <p>I always progress, read professional literature, watch educational videos and take  online courses.</p>
-<p>In my free time, I play the guitar and read foreign literature.</p>
+<p>When I have free time, I like to play the guitar and read foreign literature.</p>
     </div>
     <div class="content_left">
         <h2>Reason for applying for a job</h2>
-<p>I  am going  to grow  in the quality assurance and believe that my experience, skills and knowledge will be useful for your company.</p>
+<p>I  am going  to grow in quality assurance and believe that my experience, skills and knowledge will be useful for your company.</p>
 <p>Мy goal is to get a position in a company where I can grow and develop as a specialist.</p>
 </td>
 <td><br />
