--- a/cvweb/index.html
+++ b/cvweb/index.html
@@ -19,7 +19,7 @@
     <div class="img"> <p><img src=img/1635003703395.jpg  alt="my pfoto" style="width:230px; border-radius: 25px; " >
         </p></div>
     <div class="content_left">
-        <h2><b>QUALITY</b></h2>
+        <h2><b>QUALITYS</b></h2>
         <ul>
         <li>Sociability</li>
         <li>Responsibility</li>
