--- a/cvweb/index.html
+++ b/cvweb/index.html
@@ -19,19 +19,19 @@
     <div class="img"> <p><img src=img/1635003703395.jpg  alt="my pfoto" style="width:230px; border-radius: 25px; " >
         </p></div>
     <div class="content_left">
-        <h2><b>QUALITYS</b></h2>
+        
+        <h2><b>QUALITIES</b></h2>
         <ul>
-        <li>Sociability</li>
-        <li>Responsibility</li>
-        <li>Perseverance</li>
+        <li>Critical thinking</li>
         <li>Attention to detail</li>
-        <li>Activity</li>
+        <li>Focus on results</li>
+        <li>Perseverance</li>
+        <li>Responsibility</li>
         <li>Purposeful</li>
         <li>Discipline</li>
-        <li>Focus on results</li>
+        <li>Sociability</li>
         </ul>
     </div>
-
     <div class="content_left">
       
 <h2> Additional Information </h2>
@@ -46,6 +46,7 @@
 </td>
 <td><br />
     </div>
+    <div class="language"> <b>ENG</b> <a>/</a><a href="ua.html" target="_self">UA</a></div>
     <div class="content">
             <h1>Yurii Vynokurov - QA Engineer</h1>
             <p><a href="https://www.google.com/maps/place/%D0%9A%D0%B8%D1%97%D0%B2,+02000/data=!4m2!3m1!1s0x40d4cf4ee15a4505:0x764931d2170146fe?sa=X&ved=2ahUKEwij27rk7br0AhXJCOwKHRMEBywQ8gF6BAhoEAE"><i class="fas fa-city"></i> City: Kyiv</a></p>
@@ -54,7 +55,7 @@
             <p><a href="tg://resolve?domain=yuvynokurov"><i class="fab fa-telegram"></i> Telegram: yuvynokurov</a></p>
             <p><a href="https://www.linkedin.com/in/yuvynokurov/"><i class="fab fa-linkedin"></i> Linkedin: https://www.linkedin.com/in/yuvynokurov/</a></p>
     </div>
-    <div class="content"><h2>SKILLS</h2>
+    <div class="content"1><h2>SKILLS</h2>
         <ul>
         <li>Software testing theory;</li>
         <li>Check-lists, test cases, test suite, bug reports;</li>
@@ -81,7 +82,8 @@
     </div>
     <div class="content">
         <h1>Education</h2>
-        <p>2015 - 2020 National Pedagogical Dragomanov University, Master  (History)</p></div>
+            <p>2022 - Vadim Ksendzov's software testing course</p>
+            <p>2015 - 2020 National Pedagogical Dragomanov University, Master  (History)</p></div>
 </td>
 </tr>
 </tbody>
