--- a/cvweb/ua.html
+++ b/cvweb/ua.html
@@ -11,56 +11,57 @@
     <base target="_blank"> 
 </head>
 
-
-
-
 <body>
     <div class="continer">
         <div class="language"> <a href="index.html" target="_self">ENG</a> <a>/</a><b>UA</b></div>
 
-<div class="perent">
-    <div class="child_left_img"> <p><img src=img/1635003703395.jpg  alt="my pfoto" style="width:230px; border-radius: 25px;" >
-    </p> </div>
+        <div class="perent">
+            <div class="child_left_img"> <p><img src=img/1635003703395.jpg  alt="my pfoto" style="width:230px; border-radius: 25px;" ></p> 
+            </div>
    
-    <div class="child_right"> <h1>Винокуров Юрій QA Engineer</h1>
-        <p><a href="https://www.google.com/maps/place/%D0%9A%D0%B8%D1%97%D0%B2,+02000/data=!4m2!3m1!1s0x40d4cf4ee15a4505:0x764931d2170146fe?sa=X&ved=2ahUKEwij27rk7br0AhXJCOwKHRMEBywQ8gF6BAhoEAE"><i class="fas fa-city"></i> Місто: Київ</a></p>
-        <p><a href="tel:+380631721614"><i class="fas fa-phone-square"></i> Телефон: +380631721614</a></p>
-        <p><a href="mailto:yuvynokurov@gmail.com"><i class="fas fa-envelope"></i> Email: yuvynokurov@gmail.com</a></p>
-        <p><a href="tg://resolve?domain=yuvynokurov"><i class="fab fa-telegram"></i> Telegram: yuvynokurov</a></p>
-        <p><a href="https://www.linkedin.com/in/yuvynokurov/"><i class="fab fa-linkedin"></i> Linkedin: https://www.linkedin.com/in/yuvynokurov/</a></p></div>
+        <div class="child_right"> <h1>Винокуров Юрій QA Engineer</h1>
+            <p><a href="https://www.google.com/maps/place/%D0%9A%D0%B8%D1%97%D0%B2,+02000/data=!4m2!3m1!1s0x40d4cf4ee15a4505:0x764931d2170146fe?sa=X&ved=2ahUKEwij27rk7br0AhXJCOwKHRMEBywQ8gF6BAhoEAE"><i class="fas fa-city"></i> Місто: Київ</a></p>
+            <p><a href="tel:+380631721614"><i class="fas fa-phone-square"></i> Телефон: +380631721614</a></p>
+            <p><a href="mailto:yuvynokurov@gmail.com"><i class="fas fa-envelope"></i> Email: yuvynokurov@gmail.com</a></p>
+            <p><a href="tg://resolve?domain=yuvynokurov"><i class="fab fa-telegram"></i> Telegram: yuvynokurov</a></p>
+            <p><a href="https://www.linkedin.com/in/yuvynokurov/"><i class="fab fa-linkedin"></i> Linkedin: https://www.linkedin.com/in/yuvynokurov/</a></p></div>
     <div class="child_left"><h2>
-        <b>ЯКОСТІ</b></h2>
-        <ul>
-        <li>Критичне мислення</li>
-        <li>Увага до дрібниць</li>
-        <li>Орієнтуйтеся на результат</li>
-        <li>Наполегливість</li>
-        <li>Відповідальність</li>
-        <li>Цілеспрямованість</li>
-        <li>Дисципліна</li>
-        <li>Комунікабельність</li>
-        </ul></div>
+            <b>ЯКОСТІ</b></h2>
+            <ul>
+            <li>Критичне мислення</li>
+            <li>Увага до дрібниць</li>
+            <li>Орієнтуйтеся на результат</li>
+            <li>Наполегливість</li>
+            <li>Відповідальність</li>
+            <li>Цілеспрямованість</li>
+            <li>Дисципліна</li>
+            <li>Комунікабельність</li>
+            </ul>
+        </div>
 
 
     <div class="child_right"><h2>НАВИЧКИ</h2>
-    <ul>
-    <li>Теорія тестування;;</li>
-    <li>Check-lists, test cases, test suite, bug reports;</li>
-    <li>HTML, CSS, Git, GitHub,  Linux bash,  SQL; </li>
-    <li><b>Test Management Systems: - </b>Qase;</li>
-    <li><b>Bug Tracking Systems: - </b>Jira;</li>
-    <li><b>OS:</b> - Windows, Android, linux;</li>
-    <li><b>Automation Testing Tools: </b>- Selenium IDE, Katalon;</li>
-    <li><b>API Testing Tools:- </b> Postman, Wizdler;</li>
-    <li><b>Tools: </b>- Devtools, VS code;</li>
-    <li ><b>English Proficiency:</b> Intermediate;</li>
-    </ul></div>
+        <ul>
+        <li>Теорія тестування;;</li>
+        <li>Check-lists, test cases, test suite, bug reports;</li>
+        <li>HTML, CSS, Git, GitHub,  Linux bash,  SQL; </li>
+        <li><b>Test Management Systems: - </b>Qase;</li>
+        <li><b>Bug Tracking Systems: - </b>Jira;</li>
+        <li><b>OS:</b> - Windows, Android, linux;</li>
+        <li><b>Automation Testing Tools: </b>- Selenium IDE, Katalon;</li>
+        <li><b>API Testing Tools:- </b> Postman, Wizdler;</li>
+        <li><b>Tools: </b>- Devtools, VS code;</li>
+        <li ><b>English Proficiency:</b> Intermediate;</li>
+        </ul>
+    </div>
 
 
-    <div class="child_left"><h2> Додаткова інформація </h2>
-<p>Мене цікавлять IT сфера та веб-технології.</p>
-<p>Я постійно вдосконалююсь, читаю фахову літературу, дивлюся навчальні відео та проходжу онлайн-курси.</p>
-<p>У вільний час граю на гітарі та читаю зарубіжну літературу. </p></div>
+    <div class="child_left">
+        <h2> Додаткова інформація </h2>
+        <p>Мене цікавлять IT сфера та веб-технології.</p>
+        <p>Я постійно вдосконалююсь, читаю фахову літературу, дивлюся навчальні відео та проходжу онлайн-курси.</p>
+        <p>У вільний час граю на гітарі та читаю зарубіжну літературу. </p>
+</div>
 
 
     <div class="child_right">
@@ -79,8 +80,8 @@
         <p>Моя мета – отримати посаду в компанії, де я можу рости та розвиватися як спеціаліст.</p></div>
 
     <div class="child_right"><h1>ОСВІТА</h2>
-    <p>2022 - Курс тестування програмного забезпечення  Вадима Ксендзова;</p>
-    <p>2015 - 2020 - Національний педагогічний університет імені Драгоманова, магістр (історія);</p></div>
+        <p>2022 - Курс тестування програмного забезпечення  Вадима Ксендзова;</p>
+        <p>2015 - 2020 - Національний педагогічний університет імені Драгоманова, магістр (історія);</p></div>
 
 </div>
 </div>
