--- a/cvweb/index.html
+++ b/cvweb/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -19,16 +20,16 @@
         
              <div class="child_right"> <h1>Yurii Vynokurov - QA Engineer</h1>
         <p><a href="https://www.google.com/maps/place/%D0%9A%D0%B8%D1%97%D0%B2,+02000/data=!4m2!3m1!1s0x40d4cf4ee15a4505:0x764931d2170146fe?sa=X&ved=2ahUKEwij27rk7br0AhXJCOwKHRMEBywQ8gF6BAhoEAE"><i class="fas fa-city"></i> City: Kyiv</a></p>
-        <p><a href="tel:+380631721614"><i class="fas fa-phone-square"></i> Phone:+380631721614</a></p>
+        <p><a href="tel:+380631721614"><i class="fas fa-phone-square"></i> Phone: +380631721614</a></p>
         <p><a href="mailto:yuvynokurov@gmail.com"><i class="fas fa-envelope"></i> Email: yuvynokurov@gmail.com</a></p>
         <p><a href="tg://resolve?domain=yuvynokurov"><i class="fab fa-telegram"></i> Telegram: yuvynokurov</a></p>
-        <p><a href="https://www.linkedin.com/in/yuvynokurov/"><i class="fab fa-linkedin"></i> Linkedin: https://www.linkedin.com/in/yuvynokurov/</a></p></div>
+        <p><a href="https://www.linkedin.com/in/yuvynokurov/" style=" word-break: break-all;"><i class="fab fa-linkedin"></i> Linkedin: https://www.linkedin.com/in/yuvynokurov/</a></p></div>
         
         <div class="child_left"><h2>
         <b>QUALITIES</b></h2>
         <ul>
         <li>Critical thinking</li>
-        <li>Attention to detail</li>
+        <li>Attention to details</li>
         <li>Focus on result</li>
         <li>Perseverance</li>
         <li>Responsibility</li>
@@ -42,12 +43,12 @@
          <ul>
             <li>Software testing theory;</li>
             <li>Check-lists, test cases, test suite, bug reports;</li>
-            <li>HTML, CSS, Git, GitHub,  Linux bash,  SQL; </li>
-            <li><b>Test Management Systems: - </b>Qase;</li>
-            <li><b>Bug Tracking Systems: - </b>Jira;</li>
+            <li>HTML, CSS, Git, GitHub,  Linux bash,  SQL;</li>
+            <li><b>Test Management Systems: </b> - Qase;</li>
+            <li><b>Bug Tracking Systems: </b> - Jira;</li>
             <li><b>OS:</b> - Windows, Android, linux;</li>
             <li><b>Automation Testing Tools: </b>- Selenium IDE, Katalon;</li>
-            <li><b>API Testing Tools:- </b> Postman, Wizdler;</li>
+            <li><b>API Testing Tools: </b> - Postman, Wizdler;;</li>
             <li><b>Tools: </b>- Devtools, VS code;</li>
             <li ><b>English Proficiency:</b> Intermediate;</li>
         </ul></div>
@@ -62,7 +63,7 @@
 
          <div class="child_right">
             <h2>WORK EXPERIENCE</h2>
-            <p>July  2018 -October 2019,  February 2021-till now.   Help center Specialist</p>
+            <p>July  2018 - October 2019,  February 2021 - currently.   Help center Specialist.</p>
             <p>Main responsibilities:</p>
             <ul>
             <li>Handling of incoming and outgoing telephone calls;</li>
@@ -76,9 +77,9 @@
              <p>I  am going  to grow in quality assurance and believe that my experience, skills and knowledge will be useful for your company.</p>
              <p>Мy goal is to get a position in a company where I can grow and develop as a specialist.</p></div>
 
-        <div class="child_right"><h1>Education</h2>
+        <div class="child_right"><h2>EDUCATION</h2>
             <p>2022 - Vadim Ksendzov's software testing course;</p>
-            <p>2015 - 2020 National Pedagogical Dragomanov University, Master  (History);</p></div>
+            <p>2015 - 2020 -  National Pedagogical Dragomanov University, Master (History);</p></div>
 
 </div>
 </div>
