--- a/cvweb/index.html
+++ b/cvweb/index.html
@@ -57,7 +57,7 @@
         <div class="child_left"><h2> Additional Information </h2>
             <p>I am interested in IT and web technologies.</p>
             <p>I always progress, read professional literature, watch educational videos and take  online courses.</p>
-            <p>When I have free time, I like to play the guitar and read foreign literature.</p>
+            <p>My hobbies are music and literature. When I have free time, I like to play the guitar and read foreign literature.</p>
 </div>
 
 
@@ -69,7 +69,7 @@
             <li>Handling of incoming and outgoing telephone calls;</li>
             <li>Consulting clients on site and application issues;</li>
             <li>Provide customers with product and service information;</li>
-            <li> Document all call information according to standard operating procedures;</li>
+            <li>Document all call information according to standard operating procedures;</li>
             </ul>
         </div>
 
