--- a/cvweb/ua.html
+++ b/cvweb/ua.html
@@ -60,7 +60,7 @@
         <h2> Додаткова інформація </h2>
         <p>Мене цікавлять IT сфера та веб-технології.</p>
         <p>Я постійно вдосконалююсь, читаю фахову літературу, дивлюся навчальні відео та проходжу онлайн-курси.</p>
-        <p>У вільний час граю на гітарі та читаю зарубіжну літературу.</p>
+        <p>Мої хоббі музика та література. У вільний час граю на гітарі та читаю зарубіжну літературу.</p>
 </div>
 
 
