--- a/cvweb/index.html
+++ b/cvweb/index.html
@@ -78,7 +78,7 @@
              <p>Мy goal is to get a position in a company where I can grow and develop as a specialist.</p></div>
 
         <div class="child_right"><h2>EDUCATION</h2>
-            <p>2022 - Vadim Ksendzov's software testing course;</p>
+            <p>2022 - Software testing course by Vadim Ksendzov;</p>
             <p>2015 - 2020 -  National Pedagogical Dragomanov University, Master (History);</p></div>
 
 </div>
