--- a/index.html
+++ b/index.html
@@ -61,8 +61,8 @@
                     <li><b>Test Management Systems: </b> - Qase;</li>
                     <li><b>Bug Tracking Systems: </b> - Jira;</li>
                     <li><b>OS:</b> - Windows, Android, linux;</li>
-                    <li><b>Automation Testing Tools: </b>- Selenium IDE, Katalon;</li>
-                    <li><b>API Testing Tools: </b> - Postman, Wizdler;;</li>
+                    <li><b>Automation Testing Tools: </b>- Selenium IDE, Katalon Recorder;</li>
+                    <li><b>API Testing Tools: </b> - Postman;</li>
                     <li><b>Tools: </b>- Devtools, VS code;</li>
                     <li><b>English Proficiency:</b> Intermediate;</li>
                 </ul>
@@ -81,7 +81,8 @@
 
             <div class="child_right">
                 <h2>WORK EXPERIENCE</h2>
-                <p>July 2018 - October 2019, February 2021 - currently. Help center Specialist.</p>
+                <p>July 2018 - October 2019, February 2021 - July 2022. Help center Specialist – CCloan, (Finance
+                    services)</p>
                 <p>Main responsibilities:</p>
                 <ul>
                     <li>Сommunication with clients and other departments;</li>
@@ -100,7 +101,7 @@
 
             <div class="child_right">
                 <h2>EDUCATION</h2>
-                <p>2022 - Software testing course by Vadim Ksendzov;</p>
+                <p>2022 - Until -  Software testing course by Vadim Ksendzov;</p>
                 <p>2015 - 2020 - National Pedagogical Dragomanov University, Master (History);</p>
             </div>
 
