--- a/ua.html
+++ b/ua.html
@@ -60,8 +60,8 @@
                     <li><b>Test Management Systems:</b> - Qase;</li>
                     <li><b>Bug Tracking Systems:</b>- Jira;</li>
                     <li><b>OS:</b> - Windows, Android, linux;</li>
-                    <li><b>Automation Testing Tools:</b> - Selenium IDE, Katalon;</li>
-                    <li><b>API Testing Tools:</b> - Postman, Wizdler;</li>
+                    <li><b>Automation Testing Tools:</b> - Selenium IDE, Katalon Recorder;</li>
+                    <li><b>API Testing Tools:</b> - Postman;</li>
                     <li><b>Tools:</b> - Devtools, VS code;</li>
                     <li><b>English Proficiency:</b> Intermediate;</li>
                 </ul>
@@ -79,7 +79,8 @@
 
             <div class="child_right">
                 <h2>ДОСВІД РОБОТИ</h2>
-                <p>Липень 2018 - жовтень 2019, лютий 2021 - по даний момент - фахівець довідкового центру.</p>
+                <p>Липень 2018 - Жовтень 2019, Лютий 2021 - Липень 2022. Фахівець довідкового центру – CCloan, (Фінансові
+                    послуги)</p>
                 <p>Основні обов'язки:</p>
                 <ul>
                     <li>Комунікація з клієнтами та іншими відділами;</li>
@@ -97,7 +98,7 @@
 
             <div class="child_right">
                 <h2>ОСВІТА</h2>
-                <p>2022 - Курс тестування програмного забезпечення Вадима Ксендзова;</p>
+                <p>2022 - До теперішнього часу - Курс тестування програмного забезпечення Вадима Ксендзова;</p>
                 <p>2015 - 2020 - Національний педагогічний університет імені М.П.Драгоманова, магістр (історія);</p>
             </div>
 
