--- a/index.html
+++ b/index.html
@@ -81,8 +81,7 @@
 
             <div class="child_right">
                 <h2>WORK EXPERIENCE</h2>
-                <p>July 2018 - October 2019, February 2021 - July 2022. Help center Specialist – CCloan, (Finance
-                    services)</p>
+                <p>July 2018 - October 2019, February 2021 - July 2022. Help center Specialist </p>
                 <p>Main responsibilities:</p>
                 <ul>
                     <li>Сommunication with clients and other departments;</li>
