--- a/ua.html
+++ b/ua.html
@@ -79,8 +79,7 @@
 
             <div class="child_right">
                 <h2>ДОСВІД РОБОТИ</h2>
-                <p>Липень 2018 - Жовтень 2019, Лютий 2021 - Липень 2022. Фахівець довідкового центру – CCloan, (Фінансові
-                    послуги)</p>
+                <p>Липень 2018 - Жовтень 2019, Лютий 2021 - Липень 2022. Фахівець довідкового центру </p>
                 <p>Основні обов'язки:</p>
                 <ul>
                     <li>Комунікація з клієнтами та іншими відділами;</li>
