--- a/ua.html
+++ b/ua.html
@@ -65,14 +65,13 @@
                     <li><b>English Proficiency:</b> Intermediate;</li>
                 </ul>
             </div>
-
-
+ 
             <div class="child_left">
                 <h2> Додаткова інформація </h2>
                 <p>Мене цікавлять IT сфера та веб-технології.</p>
                 <p>Я постійно вдосконалююсь, читаю фахову літературу, дивлюся навчальні відео та проходжу онлайн-курси.
                 </p>
-                <p>Мої хоббі музика та література. У вільний час граю на гітарі та читаю зарубіжну літературу.</p>
+                <p>Мої хобі музика та література. У вільний час граю на гітарі та читаю зарубіжну літературу.</p>
             </div>
 
 
