--- a/index.html
+++ b/index.html
@@ -80,7 +80,15 @@
 
             <div class="child_right">
                 <h2>WORK EXPERIENCE</h2>
-                <p>July 2018 - October 2019, February 2021 - July 2022. Help center Specialist </p>
+                <b>July 2022 trainee QA Engineer ITX company (outsource testing)  </b>
+                <p>Main responsibilities:</p>
+                <ul>
+                    <li>Test documentation preparation ( check lists, test  cases, test suits); </li>
+                    <li>Bug report processing;</li>
+                    <li>Web and mobile application testing;</li>
+                    <li>Carrying out testing (Smoke, Critical Path, Regression, UAT, functional, ad hoc;</li>
+                </ul>
+                <b>July 2018 - October 2019, February 2021 - July 2022. Help center Specialist </b>
                 <p>Main responsibilities:</p>
                 <ul>
                     <li>Сommunication with clients and other departments;</li>
