--- a/ua.html
+++ b/ua.html
@@ -77,7 +77,15 @@
 
             <div class="child_right">
                 <h2>ДОСВІД РОБОТИ</h2>
-                <p>Липень 2018 - Жовтень 2019, Лютий 2021 - Липень 2022. Фахівець довідкового центру </p>
+                <b>Липень 2022, стажер QA Engineer Компанія ITX (аутсорсинг тестування)</b> 
+                <p>Основні обов'язки:</p>
+                <ul>
+                    <li>Підготовка тестової документації (checklists, test cases, test suits); </li>
+                    <li>Оформлення баг репортів;</li>
+                    <li>Тестування веб і мобільних додатків;</li>
+                    <li>Проведення тестування (Smoke, Critical Path, Regression, UAT, функціональне, ad hoc);</li>
+                </ul>
+                <b>Липень 2018 - Жовтень 2019, Лютий 2021 - Липень 2022. Фахівець довідкового центру </b>
                 <p>Основні обов'язки:</p>
                 <ul>
                     <li>Комунікація з клієнтами та іншими відділами;</li>
@@ -85,6 +93,7 @@
                     <li>Надавати клієнтам інформацію про продукти та послуги компанії;</li>
                     <li> Документація інформації про дзвінки відповідно до регламенту компанії;</li>
                 </ul>
+           
             </div>
             <div class="child_left">
                 <h2>Чому я заслуговую на цю посаду</h2>
