--- a/index.html
+++ b/index.html
@@ -67,26 +67,31 @@
                 </ul>
             </div>
 
- 
+
             <div class="child_left">
                 <h2> Additional Information </h2>
                 <p>I am interested in IT and web technologies.</p>
-                <p>I always progress, read professional literature, watch educational videos and take online courses.
+                <p>I am a hardworking person. I constantly read professional literature, watch educational videos and
+                    take online courses. I am interested in music, literature, and games. I am constantly learning
+                    something new and improving my skills.
+
                 </p>
-                <p>My hobbies are music and literature. When I have free time, I like to play the guitar and read
-                    foreign literature.</p>
+                <p>I am going to grow in quality assurance and believe that my experience, skills and knowledge will be
+                    useful for your company.</p>
+                <p>Мy goal is to get a position in a company where I can grow and develop as a specialist.</p>
             </div>
 
 
             <div class="child_right">
                 <h2>WORK EXPERIENCE</h2>
-                <b>July 2022 trainee QA Engineer ITX company (outsource testing)  </b>
+                <b>July 2022 trainee QA Engineer ITX company (outsource testing) </b>
                 <p>Main responsibilities:</p>
                 <ul>
-                    <li>Test documentation preparation ( check lists, test  cases, test suits); </li>
-                    <li>Bug report processing;</li>
+                    <li>Test documentation preparation (check lists, test cases, test suite); </li>
                     <li>Web and mobile application testing;</li>
-                    <li>Carrying out testing (Smoke, Critical Path, Regression, UAT, functional, ad hoc;</li>
+                    <li>Carrying out testing (Smoke, Critical Path, Regression,<br> Re-test, UAT, Ad hoc);
+                    <li>Creation of bug reports;</li>
+                    </li>
                 </ul>
                 <b>July 2018 - October 2019, February 2021 - July 2022. Help center Specialist </b>
                 <p>Main responsibilities:</p>
@@ -99,15 +104,17 @@
             </div>
 
             <div class="child_left">
-                <h2>Reason for applying for a job</h2>
-                <p>I am going to grow in quality assurance and believe that my experience, skills and knowledge will be
-                    useful for your company.</p>
-                <p>Мy goal is to get a position in a company where I can grow and develop as a specialist.</p>
+                <h2>My projects</h2>
+                <p><a href="https://yvyn.github.io/summary/"><i></i> Website</a></p>
+                <p><a href="https://github.com/Yvyn"> Git
+                        Hub</a></p>
+                <p><a href="https://drive.google.com/drive/folders/15r9fUWw35QlKpbR_br5Zei8pkg8ycjsK?usp=sharing"> Test
+                        documentation</a></p>
             </div>
 
             <div class="child_right">
                 <h2>EDUCATION</h2>
-                <p>2022 - Until -  Software testing course by Vadim Ksendzov;</p>
+                <p>2022 - Until - Software testing course by Vadim Ksendzov;</p>
                 <p>2015 - 2020 - National Pedagogical Dragomanov University, Master (History);</p>
             </div>
 
