--- a/ua.html
+++ b/ua.html
@@ -65,25 +65,32 @@
                     <li><b>English Proficiency:</b> Intermediate;</li>
                 </ul>
             </div>
- 
+
             <div class="child_left">
                 <h2> Додаткова інформація </h2>
                 <p>Мене цікавлять IT сфера та веб-технології.</p>
-                <p>Я постійно вдосконалююсь, читаю фахову літературу, дивлюся навчальні відео та проходжу онлайн-курси.
+                <p>Я працьовита людина. Постійно читаю фахову літературу, дивлюся навчальні відео та проходжу
+                    онлайн-курси. Також я цікавлюсь музикою, літературою та іграми. Я постійно вивчаю щось нове та
+                    вдосконалюю свої навички.
                 </p>
-                <p>Мої хобі музика та література. У вільний час граю на гітарі та читаю зарубіжну літературу.</p>
+                <p>Я маю намір розвиватися у сфері забезпечення якості та сподіваюсь, що мій досвід, навички та знання
+                    будуть корисними для вашої компанії. </p>
+                <p>Моя мета – отримати посаду в компанії, де я можу рости та розвиватися як спеціаліст.
+                </p>
             </div>
- 
+
 
             <div class="child_right">
                 <h2>ДОСВІД РОБОТИ</h2>
-                <b>Липень 2022, стажер QA Engineer Компанія ITX (аутсорсинг тестування)</b> 
+                <b>Липень 2022, стажер QA Engineer Компанія ITX (аутсорсинг тестування)</b>
                 <p>Основні обов'язки:</p>
                 <ul>
-                    <li>Підготовка тестової документації (checklists, test cases, test suits); </li>
+                    <li>Підготовка тестової документації (checklists, test cases, test suite); </li>
+                    <li>Тестування веб та мобільних додатків;</li>
+                    <li>Проведення тестування (Smoke, Critical Path, Regression,<br> Re-test, UAT, Ad
+                        hoc);
+                    </li>
                     <li>Оформлення баг репортів;</li>
-                    <li>Тестування веб і мобільних додатків;</li>
-                    <li>Проведення тестування (Smoke, Critical Path, Regression, UAT, функціональне, ad hoc);</li>
                 </ul>
                 <b>Липень 2018 - Жовтень 2019, Лютий 2021 - Липень 2022. Фахівець довідкового центру </b>
                 <p>Основні обов'язки:</p>
@@ -93,13 +100,15 @@
                     <li>Надавати клієнтам інформацію про продукти та послуги компанії;</li>
                     <li> Документація інформації про дзвінки відповідно до регламенту компанії;</li>
                 </ul>
-           
+
             </div>
             <div class="child_left">
-                <h2>Чому я заслуговую на цю посаду</h2>
-                <p>Я маю намір розвиватися у сфері забезпечення якості та вважаю, що мій досвід, навички та знання
-                    будуть корисними для вашої компанії.</p>
-                <p>Моя мета – отримати посаду в компанії, де я можу рости та розвиватися як спеціаліст.</p>
+                <h2>МОЇ ПРОЕКТИ</h2>
+                <p><a href="https://yvyn.github.io/summary/"><i></i> Вебсайт</a></p>
+                <p><a href="https://github.com/Yvyn"> Git
+                        Hub</a></p>
+                <p><a href="https://drive.google.com/drive/folders/15r9fUWw35QlKpbR_br5Zei8pkg8ycjsK?usp=sharing">
+                        Тестова документація</a></p>
             </div>
 
             <div class="child_right">
