--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
     <div class="continer">
         <div class="language"> <b>ENG</b> <a>/</a><a href="ua.html" target="_self">UA</a></div>
         <div class="perent">
-            <div class="child_left_img">
-                <p><img src=img/1635003703395.jpg alt="my pfoto" style="width:230px; border-radius: 25px;">
+            <div class="child_left">
+                <p><img src=img/1635003703395.jpg alt="my pfoto">
                 </p>
             </div>
 
@@ -84,7 +84,7 @@
 
             <div class="child_right">
                 <h2>WORK EXPERIENCE</h2>
-                <b>July 2022 trainee QA Engineer ITX company (outsource testing) </b>
+                <b>July 2022- August 2023. Trainee QA Engineer ITX company (outsource testing) </b>
                 <p>Main responsibilities:</p>
                 <ul>
                     <li>Test documentation preparation (check lists, test cases, test suite); </li>
@@ -114,7 +114,7 @@
 
             <div class="child_right">
                 <h2>EDUCATION</h2>
-                <p>2022 - Until - Software testing course by Vadim Ksendzov;</p>
+                <p>2023 - Software testing course by Vadim Ksendzov;</p>
                 <p>2015 - 2020 - National Pedagogical Dragomanov University, Master (History);</p>
             </div>
 
