--- a/ua.html
+++ b/ua.html
@@ -17,8 +17,9 @@
         <div class="language"> <a href="index.html" target="_self">ENG</a> <a>/</a><b>UA</b></div>
 
         <div class="perent">
-            <div class="child_left_img">
-                <p><img src=img/1635003703395.jpg alt="my pfoto" style="width:230px; border-radius: 25px;"></p>
+            <div class="child_left">
+                <p><img src=img/1635003703395.jpg alt="my pfoto">
+                </p>
             </div>
 
             <div class="child_right">
@@ -82,7 +83,7 @@
 
             <div class="child_right">
                 <h2>ДОСВІД РОБОТИ</h2>
-                <b>Липень 2022, стажер QA Engineer Компанія ITX (аутсорсинг тестування)</b>
+                <b>Липень 2022 - Cерпень 2023, Cтажер QA Engineer Компанія ITX (аутсорсинг тестування)</b>
                 <p>Основні обов'язки:</p>
                 <ul>
                     <li>Підготовка тестової документації (checklists, test cases, test suite); </li>
@@ -113,7 +114,7 @@
 
             <div class="child_right">
                 <h2>ОСВІТА</h2>
-                <p>2022 - До теперішнього часу - Курс тестування програмного забезпечення Вадима Ксендзова;</p>
+                <p>20223 - Курс тестування програмного забезпечення Вадима Ксендзова;</p>
                 <p>2015 - 2020 - Національний педагогічний університет імені М.П.Драгоманова, магістр (історія);</p>
             </div>
 
