--- a/index.html
+++ b/index.html
@@ -13,11 +13,11 @@
 </head>
 
 <body>
-    <div class="continer">
+    <div class="container">
         <div class="language"> <b>ENG</b> <a>/</a><a href="ua.html" target="_self">UA</a></div>
-        <div class="perent">
+        <div class="parent">
             <div class="child_left">
-                <p><img src=img/1635003703395.jpg alt="my pfoto">
+                <p><img src=img/1635003703395.jpg alt="my photo">
                 </p>
             </div>
 
@@ -59,9 +59,9 @@
                     <li>Check-lists, test cases, test suite, bug reports;</li>
                     <li>HTML, CSS, Git, GitHub, Linux bash, SQL;</li>
                     <li><b>Test Management Systems: </b> - Qase;</li>
-                    <li><b>Bug Tracking Systems: </b> - Jira;</li>
+                    <li><b>Bug Tracking Systems: </b> - Jira, Notion;</li>
                     <li><b>OS:</b> - Windows, Android, linux;</li>
-                    <li><b>API Testing Tools: </b> - Postman;</li>
+                    <li><b>API Testing Tools: </b> - Postman, Swagger;</li>
                     <li><b>Tools: </b>- Devtools, VS code;</li>
                     <li><b>English Proficiency:</b> Intermediate;</li>
                 </ul>
@@ -84,15 +84,28 @@
 
             <div class="child_right">
                 <h2>WORK EXPERIENCE</h2>
+                <b>Nov 2023 - now. QA Engineer in Inboost </b>
+                <p>Main responsibilities:</p>
+                <ul>
+                    <li>Web testing (smoke, regression, retest, cross-browser, functional testing, non-functional
+                        testing, UI/UX, localization etc.); </li>
+                    <li>API testing (Postman, Swagger);</li>
+                    <li>Working with Notion system;
+                    <li>Creation of test documentation (check lists, test cases, bug reports);</li>
+                    <li>Root cause analysis for defects;</li>
+                    </li>
+                </ul>
+                <hr>
                 <b>July 2022- August 2023. Trainee QA Engineer ITX company (outsource testing) </b>
                 <p>Main responsibilities:</p>
                 <ul>
-                    <li>Test documentation preparation (check lists, test cases, test suite); </li>
+                    <li>Test documentation preparation (checklists, test cases, test suite); </li>
                     <li>Web and mobile application testing;</li>
                     <li>Carrying out testing (Smoke, Critical Path, Regression,<br> Re-test, UAT, Ad hoc);
                     <li>Creation of bug reports;</li>
                     </li>
                 </ul>
+                <hr>
                 <b>July 2018 - October 2019, February 2021 - July 2022. Help center Specialist </b>
                 <p>Main responsibilities:</p>
                 <ul>
@@ -102,6 +115,11 @@
                     <li>Document all call information according to standard operating procedures;</li>
                 </ul>
             </div>
+
+
+
+
+
 
             <div class="child_left">
                 <h2>My projects</h2>
