--- a/ua.html
+++ b/ua.html
@@ -13,12 +13,12 @@
 </head>
 
 <body>
-    <div class="continer">
+    <div class="container">
         <div class="language"> <a href="index.html" target="_self">ENG</a> <a>/</a><b>UA</b></div>
 
-        <div class="perent">
+        <div class="parent">
             <div class="child_left">
-                <p><img src=img/1635003703395.jpg alt="my pfoto">
+                <p><img src=img/1635003703395.jpg alt="my photo">
                 </p>
             </div>
 
@@ -59,13 +59,14 @@
                     <li>Check-lists, test cases, test suite, bug reports;</li>
                     <li>HTML, CSS, Git, GitHub, Linux bash, SQL;</li>
                     <li><b>Test Management Systems:</b> - Qase;</li>
-                    <li><b>Bug Tracking Systems:</b>- Jira;</li>
+                    <li><b>Bug Tracking Systems:</b>- Jira, Notion;</li>
                     <li><b>OS:</b> - Windows, Android, linux;</li>
-                    <li><b>API Testing Tools:</b> - Postman;</li>
+                    <li><b>API Testing Tools:</b> - Postman, Swagger;</li>
                     <li><b>Tools:</b> - Devtools, VS code;</li>
                     <li><b>English Proficiency:</b> Intermediate;</li>
                 </ul>
             </div>
+
 
             <div class="child_left">
                 <h2> Додаткова інформація </h2>
@@ -80,9 +81,20 @@
                 </p>
             </div>
 
-
             <div class="child_right">
                 <h2>ДОСВІД РОБОТИ</h2>
+                <b>Листопад 2023 - теперішній час. QA Engineer в Inboost</b>
+
+                <p>Основні обов'язки:</p>
+                <ul>
+                    <li>Веб-тестування (smoke, regression, retest, cross-browser, functional testing, non-functional
+                        testing, UI/UX, localization etc. )</li>
+                    <li>API testing (Postman, Swagger);</li>
+                    <li>Робота з системою Notion;</li>
+                    <li>Створення тестової документації (checklists, test cases, Bug Reports);</li>
+                    <li>Аналіз першопричин дефектів;</li>
+                </ul>
+                <hr>
                 <b>Липень 2022 - Cерпень 2023, Cтажер QA Engineer Компанія ITX (аутсорсинг тестування)</b>
                 <p>Основні обов'язки:</p>
                 <ul>
@@ -93,6 +105,7 @@
                     </li>
                     <li>Оформлення баг репортів;</li>
                 </ul>
+                <hr>
                 <b>Липень 2018 - Жовтень 2019, Лютий 2021 - Липень 2022. Фахівець довідкового центру </b>
                 <p>Основні обов'язки:</p>
                 <ul>
@@ -103,6 +116,8 @@
                 </ul>
 
             </div>
+
+
             <div class="child_left">
                 <h2>МОЇ ПРОЕКТИ</h2>
                 <p><a href="https://yvyn.github.io/summary/"><i></i> Вебсайт</a></p>
@@ -114,7 +129,7 @@
 
             <div class="child_right">
                 <h2>ОСВІТА</h2>
-                <p>20223 - Курс тестування програмного забезпечення Вадима Ксендзова;</p>
+                <p>2023 - Курс тестування програмного забезпечення Вадима Ксендзова;</p>
                 <p>2015 - 2020 - Національний педагогічний університет імені М.П.Драгоманова, магістр (історія);</p>
             </div>
 
